# rc-new

./: ArmController.cpp  ArmController.h  CMakeLists.txt  CarController.cpp  CarController.h  KeyboardHandler.qml  Main.qml  MjpegStreamer.cpp  MjpegStreamer.h  NetworkManager.cpp  NetworkManager.h  PathfindingEngine.cpp  PathfindingEngine.h  main.cpp  resources.qrc
components/: AngleDisplay.qml
src/components/: ArmControlPanel.qml  CameraStream.qml  FullMap.qml  MapControls.qml  MiniMap.qml  MotorCommands.qml  PathStatus.qml  SliderControls.qml  SpeedSlider.qml  StatusBar.qml  StatusIndicator.qml  StopButton.qml  TopographicalMapView.qml  TurnSlider.qml  WASD.qml
src/pages/: ControlPage.qml  MapPage.qml
